# pdf2latex_llm

./: .gitignore  Dockerfile.serve  Dockerfile.train  README.md  pyproject.toml  scratch.ipynb
pdf2latex/: data_process.py  explore.py  merge_lora_checkpoint.py  pdf2latex_trainer.py  push_model_to_hub.py  save_lora_checkpoint.py  serve_entrypoint.py  train.py
scripts/: gcp_build_and_push.sh  gcp_deploy_serve.py  gcp_submit_train.py  serve.sh  stage_model.py  test_endpoint.py  train.sh
terraform/: .terraform.lock.hcl  apis.tf  main.tf  registry.tf  storage.tf  terraform.tfvars  variables.tf
tests/: test_metrics.py
